updates info and background colour

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
             <p class="rela-block caps side-header">Technical Skills</p>
             <div class="row">
-                <div class="column">
-                    <p class="rela-block list-thing">Scala</p>
+                <div class="columnLeft">
                     <p class="rela-block list-thing">AWS</p>
+                    <p class="rela-block list-thing">Scala</p>
                     <p class="rela-block list-thing">Java</p>
                     <p class="rela-block list-thing">Kotlin</p>
                     <p class="rela-block list-thing">Swift</p>
                 </div>
-                <div class="column">
+                <div class="columnRight">
                     <p class="rela-block list-thing">TypeScript</p>
                     <p class="rela-block list-thing">React</p>
                     <p class="rela-block list-thing">HTML/CSS</p>
@@ -65,7 +65,7 @@
 
 
             <p class="rela-block caps side-header">Awards</p>
-            <p class="rela-block list-thing"><b>Mary G. Ross Prize</b>: University of Glasgow, 2015</p>
+            <p class="rela-block list-thing"><b>University of Glasgow</b><br>Mary G. Ross Prize, 2015</p>
         </div>
         <div class="rela-block content-container">
             <h2 class="rela-block caps title">Software Engineer</h2>
@@ -77,19 +77,20 @@
                 <b>BBC Sounds: Radio & Music Services</b> | Mar 2021 - Present | Glasgow, Scotland
             </p>
             <ul>
-                <li>Developed APIs used for BBC Sounds web and mobile applications.</li>
+                <li>Developed and maintained APIs used for BBC Sounds web and mobile applications.</li>
                 <li>Aided in migration of monitoring and alerting systems to AWS.</li>
+                <li>Broadened BDD test coverage for team's codebase.</li>
             </ul>
 
             <p class="light">
                 <b>BBC News and Weather Apps</b> | Sep 2020 - Feb 2021 | Glasgow, Scotland
             </p>
             <ul>
-                <li>Implemented features of BBC Weather app UI rebuild for iOS 14, accessibility features and split
+                <li>Engineered parts of BBC Weather app UI rebuild for iOS 14+, including accessibility features and split
                     screen support.</li>
-                <li>Developed small and medium BBC Weather app widgets for iOS 14+ devices.</li>
-                <li>Built Android app with widget in 10% time that takes data from BBC Weather API and animates a
-                    weathervane using wind data.</li>
+                <li>Created small and medium BBC Weather app widgets for iOS 14+ devices.</li>
+                <li>Built Android app with widget that takes wind data from BBC Weather API and animates a
+                    weathervane.</li>
 
             </ul>
 
@@ -97,24 +98,24 @@
                 <b>BBC Voice and AI</b> | Mar 2020 - Aug 2020 | Glasgow, Scotland
             </p>
             <ul>
-                <li>Increased routing accuracy of Beeb voice assistant NLU model.</li>
+                <li>Increased routing accuracy of NLU model for Beeb voice assistant.</li>
                 <li>Added support for extracting genre entities from music and podcast related requests to Beeb.</li>
-                <li>Updated Jenkins pipeline for publishing Beeb NLU model to include more thorough tests.</li>
+                <li>Optimised tests in Jenkins pipeline for publishing Beeb NLU model.</li>
             </ul>
 
             <p class="light">
                 <b>BBC Archive Services</b> | Sep 2019 - Feb 2020 | Glasgow, Scotland
             </p>
             <ul>
-                <li>Helped to integrate BBC Archive Search with BBC Login Single Sign-On service.</li>
-                <li>Developed front-end features of BBC Archive Status tool.</li>
-                <li>Added search functionality to Archive Status tool with input validation.</li>
+                <li>Helped with integration of BBC Login SSO functionality into BBC Archive Search.</li>
+                <li>Implemented front-end features of BBC Archive Status tool.</li>
+                <li>Improved search capabilities of BBC Archive Status tool.</li>
             </ul>
 
             <h3>Squarepoint Capital</h3>
             <p class="light"><b>Technology Internship</b> | Jun 2018 - Aug 2018 | New York, NY, USA</p>
             <ul>
-                <li>Created tool to set up local sandbox development environment of trading system.</li>
+                <li>Scripted tool to set up local sandbox development environment of trading system.</li>
                 <li>Debugged features of large C++ codebase for trading system.</li>
                 <li>Organised tasks using version control and issue tracking software.</li>
             </ul>
@@ -123,7 +124,7 @@
             <p class="light"><b>Market Research Internship</b> | Sep 2016 - Jun 2017 | Marseille, France</p>
             <ul>
                 <li>Designed and developed new version of company website.</li>
-                <li>Evaluated qualitative and quantitative data to improve recruitment process for focus groups.</li>
+                <li>Evaluated qualitative and quantitative data to streamline recruitment process for focus groups.</li>
                 <li>Provided translation services for English-speaking clients.</li>
             </ul>
         </div>
