--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             </div>
 
             <p class="rela-block caps side-header">Volunteer Work</p>
-            <p class="rela-block list-thing"><b>CodeYourFuture</b><br>Teaching Assistant<br> Jun 2020 - Present</p>
+            <p class="rela-block list-thing"><b>CodeYourFuture</b><br>Teaching Assistant<br> Jul 2020 - Present</p>
             <p class="rela-block list-thing">Volunteer at CodeYourFuture, a programming school for people from
                 disadvantaged backgrounds.</p>
-            <p class="rela-block list-thing">Responsibilities include providing feedback on applicants' HTML and CSS
-                code submissions during the application process and assisting at weekend classes to teach students
+            <p class="rela-block list-thing">Responsibilities include providing feedback on
+                code submissions during the application process and assisting at weekend classes to teach
                 modern web development skills.</p>
 
             <p class="rela-block caps side-header">Education</p>
@@ -88,7 +88,7 @@
             <ul>
                 <li>Engineered parts of BBC Weather app UI rebuild for iOS 14+, including accessibility features and split
                     screen support.</li>
-                <li>Created small and medium BBC Weather app widgets for iOS 14+ devices.</li>
+                <li>Created features of small and medium BBC Weather app widgets for iOS 14+ devices.</li>
                 <li>Built Android app with widget that takes wind data from BBC Weather API and animates a
                     weathervane.</li>
 
@@ -121,9 +121,9 @@
             </ul>
 
             <h3>Marseille Etudes Meetings</h3>
-            <p class="light"><b>Market Research Internship</b> | Sep 2016 - Jun 2017 | Marseille, France</p>
+            <p class="light"><b>Market Research Internship</b> | Sep 2016 - Jun 2017 | Marseille, Provence-Alpes-Côte d'Azur, France</p>
             <ul>
-                <li>Designed and developed new version of company website.</li>
+                <li>Designed new version of company website.</li>
                 <li>Evaluated qualitative and quantitative data to streamline recruitment process for focus groups.</li>
                 <li>Provided translation services for English-speaking clients.</li>
             </ul>
