updates cv info

--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
                 </div>
             </div>
 
+            <p class="rela-block caps side-header">Education</p>
+            <p class="rela-block list-thing"><b>University of Glasgow</b><br> Sep 2014 - Jun 2019</p>
+            <p class="rela-block list-thing">MA Computing Science and French,<br>Upper Second Class Honours (2:1)</p>
+            <p class="rela-block list-thing">Dissertation: Emulating Glasgow's First Computer - <u><a
+                        href="https://github.com/gerardward3/level4-project">github.com/gerardward3/level4-project</a></u>
+            </p>
+
+            <p class="rela-block caps side-header">Awards</p>
+            <p class="rela-block list-thing"><b>University of Glasgow</b><br>Mary G. Ross Prize, 2015</p>
+
             <p class="rela-block caps side-header">Volunteer Work</p>
             <p class="rela-block list-thing"><b>CodeYourFuture</b><br>Teaching Assistant<br> Jul 2020 - Present</p>
             <p class="rela-block list-thing">Volunteer at CodeYourFuture, a programming school for people from
@@ -56,16 +66,6 @@
                 code submissions during the application process and assisting at weekend classes to teach
                 modern web development skills.</p>
 
-            <p class="rela-block caps side-header">Education</p>
-            <p class="rela-block list-thing"><b>University of Glasgow</b><br> Sep 2014 - Jun 2019</p>
-            <p class="rela-block list-thing">MA Computing Science and French,<br>Upper Second Class Honours (2:1)</p>
-            <p class="rela-block list-thing">Dissertation: Emulating Glasgow's First Computer - <u><a
-                        href="https://github.com/gerardward3/level4-project">github.com/gerardward3/level4-project</a></u>
-            </p>
-
-
-            <p class="rela-block caps side-header">Awards</p>
-            <p class="rela-block list-thing"><b>University of Glasgow</b><br>Mary G. Ross Prize, 2015</p>
         </div>
         <div class="rela-block content-container">
             <h2 class="rela-block caps title">Software Engineer</h2>
@@ -79,7 +79,7 @@
             <ul>
                 <li>Developed and maintained APIs used for BBC Sounds web and mobile applications.</li>
                 <li>Aided in migration of monitoring and alerting systems to AWS.</li>
-                <li>Broadened BDD test coverage for team's codebase.</li>
+                <li>Assisted in creation of load test tool to improve testing of Sounds popularity services workflow.</li>
             </ul>
 
             <p class="light">
@@ -109,7 +109,7 @@
             <ul>
                 <li>Helped with integration of BBC Login SSO functionality into BBC Archive Search.</li>
                 <li>Implemented front-end features of BBC Archive Status tool.</li>
-                <li>Improved search capabilities of BBC Archive Status tool.</li>
+                <li>Hosted retrospectives and demonstrated work at team demos.</li>
             </ul>
 
             <h3>Squarepoint Capital</h3>
