--- a/index.html
+++ b/index.html
@@ -33,38 +33,45 @@
             <p class="rela-block caps side-header">Technical Skills</p>
             <div class="row">
                 <div class="columnLeft">
-                    <p class="rela-block list-thing">AWS</p>
+                    <p class="rela-block list-thing">Node.js</p>
                     <p class="rela-block list-thing">Scala</p>
                     <p class="rela-block list-thing">Java</p>
                     <p class="rela-block list-thing">Kotlin</p>
                     <p class="rela-block list-thing">Swift</p>
                 </div>
                 <div class="columnRight">
+                    <p class="rela-block list-thing">AWS</p>
                     <p class="rela-block list-thing">TypeScript</p>
                     <p class="rela-block list-thing">React</p>
                     <p class="rela-block list-thing">HTML/CSS</p>
                     <p class="rela-block list-thing">Git</p>
-                    <p class="rela-block list-thing">Jenkins</p>
                 </div>
             </div>
 
             <p class="rela-block caps side-header">Education</p>
             <p class="rela-block list-thing"><b>University of Glasgow</b><br> Sep 2014 - Jun 2019</p>
             <p class="rela-block list-thing">MA Computing Science and French,<br>Upper Second Class Honours (2:1)</p>
-            <p class="rela-block list-thing">Dissertation: Emulating Glasgow's First Computer - <u><a
+
+
+            <p class="rela-block caps side-header">Projects</p>
+            <p class="rela-block list-thing"><b>BBC WeatherVane</b>: <u><a
+                        href="https://github.com/gerardward3/WeatherVane">github.com/gerardward3/WeatherVane</a></u>
+            </p>
+            <p class="rela-block list-thing">Side project completed during BBC Software Engineering Graduate Scheme
+                rotation with News and
+                Weather Apps team. Android app
+                with widget that uses BBC Weather API data to animate a weathervane.</p>
+
+            <br>
+
+            <p class="rela-block list-thing"><b>Emulating Glasgow's First Computer</b>: <u><a
                         href="https://github.com/gerardward3/level4-project">github.com/gerardward3/level4-project</a></u>
             </p>
+            <p class="rela-block list-thing">Final year university project for Computing Science dissertation. Web
+                emulator of the DEUCE - Glasgow's first computer. Received A5 grade for dissertation + project. </p>
 
             <p class="rela-block caps side-header">Awards</p>
             <p class="rela-block list-thing"><b>University of Glasgow</b><br>Mary G. Ross Prize, 2015</p>
-
-            <p class="rela-block caps side-header">Volunteer Work</p>
-            <p class="rela-block list-thing"><b>CodeYourFuture</b><br>Teaching Assistant<br> Jul 2020 - Present</p>
-            <p class="rela-block list-thing">Volunteer at CodeYourFuture, a programming school for people from
-                disadvantaged backgrounds.</p>
-            <p class="rela-block list-thing">Responsibilities include providing feedback on
-                code submissions during the application process and assisting at weekend classes to teach
-                modern web development skills.</p>
 
         </div>
         <div class="rela-block content-container">
@@ -74,23 +81,32 @@
 
             <h3>BBC</h3>
             <p class="light">
-                <b>BBC Sounds: Radio & Music Services</b> | Mar 2021 - Present | Glasgow, Scotland
+                <b>BBC Home: Data Capabilities</b> | Jun 2021 - Present | Glasgow, Scotland
+            </p>
+            <ul>
+                <li>Developed backend features of BBC Homepage to provide more personalised content to signed in users.
+                </li>
+                <li>Used AWS AppSync to mantain GraphQL APIs.</li>
+                <li>Deployed cloud infrastructure using AWS CDK to write AWS CloudFormation templates.</li>
+            </ul>
+
+            <p class="light">
+                <b>BBC Sounds: Radio & Music Services</b> | Mar 2021 - Jun 2021 | Glasgow, Scotland
             </p>
             <ul>
                 <li>Developed and maintained APIs used for BBC Sounds web and mobile applications.</li>
                 <li>Aided in migration of monitoring and alerting systems to AWS.</li>
-                <li>Assisted in creation of load test tool to improve testing of Sounds popularity services workflow.</li>
+                <li>Assisted in creation of load test tool to improve testing of Sounds popularity services workflow.
+                </li>
             </ul>
 
             <p class="light">
                 <b>BBC News and Weather Apps</b> | Sep 2020 - Feb 2021 | Glasgow, Scotland
             </p>
             <ul>
-                <li>Engineered parts of BBC Weather app UI rebuild for iOS 14+, including accessibility features and split
-                    screen support.</li>
+                <li>Rewrote parts of BBC Weather app for iOS 14+ using SwiftUI framework.</li>
                 <li>Created features of small and medium BBC Weather app widgets for iOS 14+ devices.</li>
-                <li>Built Android app with widget that takes wind data from BBC Weather API and animates a
-                    weathervane.</li>
+                <li>Improved accessibility features and split screen support of BBC Weather app for iOS.</li>
 
             </ul>
 
@@ -108,7 +124,7 @@
             </p>
             <ul>
                 <li>Helped with integration of BBC Login SSO functionality into BBC Archive Search.</li>
-                <li>Implemented front-end features of BBC Archive Status tool.</li>
+                <li>Implemented frontend features of BBC Archive Status tool.</li>
                 <li>Hosted retrospectives and demonstrated work at team demos.</li>
             </ul>
 
@@ -121,7 +137,8 @@
             </ul>
 
             <h3>Marseille Etudes Meetings</h3>
-            <p class="light"><b>Market Research Internship</b> | Sep 2016 - Jun 2017 | Marseille, Provence-Alpes-Côte d'Azur, France</p>
+            <p class="light"><b>Market Research Internship</b> | Sep 2016 - Jun 2017 | Marseille, Provence-Alpes-Côte
+                d'Azur, France</p>
             <ul>
                 <li>Designed new version of company website.</li>
                 <li>Evaluated qualitative and quantitative data to streamline recruitment process for focus groups.</li>
