updates skills list

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="columnRight">
                     <p class="rela-block list-thing">AWS</p>
-                    <p class="rela-block list-thing">TypeScript</p>
+                    <p class="rela-block list-thing">Python</p>
                     <p class="rela-block list-thing">React</p>
                     <p class="rela-block list-thing">HTML/CSS</p>
                     <p class="rela-block list-thing">Git</p>
